AA-2002-03-21-1  Bugfix:    sorting in functional/override policy,
                            fix for not emptying matrix

AA-2002-03-21-0  Bugfix:    SGE_KEYFILE, SGE_CERTFILE 
                            sec install scripts

CR-2002-03-21-4  Bugfix:    scheduler generates high CPU load for 1-2 minutes
                            when sge_commd is killed.
                 Issue:     #197

EB-2002-03-21-2  Bugfix:    remove old configuration (EB-2002-03-21-0)

CR-2002-03-21-3  Testsuite: - used wrong path in path_alias test
                 Bugfix:    - don't use shepherd wrapper script (code is
                              just out commented for later reuse)

EB-2002-03-21-1  Enhancem.: sort output of qconf -sep

CR-2002-03-21-2  Bugfix:    changed error messages when master commd is not
                            reachable.

CR-2002-03-21-1  Bugfix:    removed forgotten #if0 - #endif statement which
                            chauses scheduler to abort() on testsuite's 
                            path_alias check.

JG-2002-03-21-0  Bugfix:    prioritization of messages to qmaster could block
                            reports from execd's to qmaster and make the system
                            unusable.
                            Set "no prioritization" as default, behaviour can
                            be changed via env variable SGE_PRIORITY_TAGS.

EB-2002-03-21-0  Bugfix:    local config not written as admin user at startup
                 Issue:     #198

CR-2002-03-21-0  Testsuite: merge from maintrunc
                            sending "vt100" when client host is using tset
                            for terminal settings.

AA-2002-03-20-0  Bugfix:    qhost formatting

EB-2002-03-20-1  Bugfix:    can't receive request: READ ERROR
                            - replaced closeconnection(0) calls within 
                              recvfromcommd() through closeconnection(1) calls 
                              in case of read error